--- a/public/css/post-need.css
+++ b/public/css/post-need.css
@@ -14,28 +14,10 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
+    background-color: white;
     color: var(--fontColor);
 }
-.logo {
-    display: flex;
-    align-items: center;
-    margin-top: 25px;
-    margin-left: 30px;
-}
-.icon {
-    background-image: url(../images/icon.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 25px;
-    height: 25px;
-}
-.logo-name {
-    margin-left: 2px;
-    font-weight: 700;
-    font-size: 20px;
-}
-
-.section {
+.form {
     position: absolute;
     border-radius: 5px;
     width: 350px;
@@ -43,10 +25,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-}
-.usr-form {
     display: flex;
     flex-direction: column;
 }
@@ -67,45 +45,56 @@ p {
     margin-top: 10px;
     margin-bottom: 5px;
 }
-#full_name {
+#product-title {
     margin-bottom: 5px;
     border: 1px solid var(--secondColor);
     padding: 10px;
     border-radius: 5px;
 }
-#phone,
-#location {
+#dropdown {
     margin-bottom: 5px;
     border: 1px solid var(--secondColor);
     padding: 10px;
     border-radius: 5px;
 }
-#email {
+/* #price {
     margin-bottom: 5px;
     border: 1px solid var(--secondColor);
     padding: 10px;
     border-radius: 5px;
-}
-#password {
-    margin-bottom: 25px;
+  } */
+#description {
+    margin-bottom: 10px;
     border: 1px solid var(--secondColor);
     padding: 10px;
     border-radius: 5px;
 }
-.log-in {
-    font-weight: 400;
-    font-size: 12px;
-    color: var(--secondColor);
-    margin-top: 25px;
-    text-align: center;
+.drag {
+    margin-bottom: 10px;
+    margin-left: 15px;
 }
-.sign-btn {
+/* .btn {
+    display: block;
+} */
+.submit,
+.cancel {
     color: var(--whiter);
     background-color: var(--mainColor);
     padding: 10px;
+    width: 350px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
+.cancel {
+    color: var(--mainColor);
+    background-color: var(--whiter);
+    border: 1px solid var(--mainColor);
+    margin-top: 5px;
+    display: block;
+    text-align: center;
+}
+
 footer p {
     margin-left: 30px;
     font-weight: 400;
