--- a/public/css/product-page.css
+++ b/public/css/product-page.css
@@ -35,7 +35,7 @@ h2 {
     padding: 50px;
 }
 .product-img {
-    background-image: url(../images/s-l1600.jpg);
+    /* background-image: url(../images/s-l1600.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     background-color: transparent;
@@ -64,13 +64,17 @@ h2 {
     margin: 5px 5px;
 }
 .offer-btn {
-    color: var(--whiter);
-    background-color: var(--mainColor);
-    text-align: center;
+    color: var(--mainColor);
+    background-color: var(--whiter);
+    border: 1px solid var(--mainColor);
     padding: 10px;
-    border: none;
+    text-align: center;
+    margin-bottom: 5px;
     border-radius: 5px;
     cursor: pointer;
+}
+form {
+    display: contents;
 }
 footer p {
     margin-left: 30px;
@@ -91,7 +95,7 @@ footer p {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 .offer-img {
-    background-image: url(../images/s-l1600.jpg);
+    /* background-image: url(../images/s-l1600.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     background-color: transparent;
