--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -57,16 +57,20 @@ h2 {
     cursor: pointer;
 }
 .card-img {
-    /* background-image: url(../images/s-l1600.jpg); */
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: transparent;
-    background-position: center;
+    position: relative;
+    overflow: hidden;
     width: 90%;
     height: 300px;
     margin-top: 15px;
     margin-left: 5%;
     border-radius: 5px;
+}
+.card-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 25px;
 }
 .card-info {
     margin-left: 5%;
