--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -89,7 +89,7 @@
     border-top: 1px solid var(--fontColor);
     padding-top: 5px;
 }
-footer .p {
+footer p {
     margin-left: 30px;
     font-weight: 400;
     font-size: 12px;
